@@ -42,6 +42,8 @@
 void inline_size
 pollidx_init (int *base, int count)
 {
+  /* consider using memset (.., -1, ...), which is pratically guarenteed
+   * to work on all systems implementing poll */
   while (count--)
     *base++ = -1;
 }
